--- a/index.html
+++ b/index.html
@@ -1,12 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p>Hello, World!</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kasavets Aliaksandr</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="assets/img/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anek+Malayalam&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      .rounded-img {
+        width: 60%;
+        border-radius: 60%;
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
+        padding: 0.5em;
+        margin-bottom: 1em;
+      }
+      .nav-list {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        list-style: none;
+      }
+
+      * {
+        box-sizing: border-box;
+      }
+      body {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      }
+      .container {
+        max-width: 1440px;
+        margin: 0 auto;
+      }
+      html {
+        scroll-behavior: smooth;
+      }
+      .nav-list {
+        list-style: none;
+      }
+      .nav-link {
+        padding: 0 20px;
+        line-height: 60px;
+      }
+      .nav-link:hover {
+        background-color: rgba(0, 0, 0, 0.2);
+      }
+      .nav-link {
+        transition: 0.3s;
+      }
+      .section-item a {
+        color: #6a9b70;
+        text-decoration: none;
+        transition: color 0.5s;
+      }
+      .section-item a:hover {
+        color: #9b4e4e;
+      }
+      .main-container {
+        display: flex;
+        flex-wrap: wrap;
+      }
+
+      .section {
+        width: 50%;
+      }
+
+      @media (max-width: 768px) {
+        .section {
+          width: 100%;
+        }
+      }
+      body {
+        font-family: "Anek Malayalam", sans-serif;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #200a36;
+      }
+      .section-title {
+        font-size: 40px;
+        font-weight: 400;
+        text-transform: uppercase;
+        letter-spacing: 10px;
+        color: #080e09;
+      }
+      .section-sub {
+        font-size: 30px;
+        font-weight: 300;
+        text-transform: capitalize;
+        letter-spacing: 10px;
+        color: #165021;
+      }
+      .link {
+        text-decoration: none;
+        color: #829985;
+        transition: color 0.5s;
+      }
+
+      .link:hover {
+        color: #5d7260;
+      }
+    </style>
+  </head>
+  <body>
+    <header clas="header">
+      <div class="container container-nav">
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-team">
+              <a href="#contacs" class="nav-link">Contacs</a>
+            </li>
+            <li class="nav-team">
+              <a href="#about me" class="nav-link">About Me</a>
+            </li>
+            <li class="nav-team">
+              <a href="#skils" class="nav-link">Skils</a>
+            </li>
+            <li class="nav-team">
+              <a href="#code example" class="nav-link">Code Example</a>
+            </li>
+            <li class="nav-team">
+              <a href="#expirience" class="nav-link">Expirience</a>
+            </li>
+            <li class="nav-team">
+              <a href="#education" class="nav-link">Education</a>
+            </li>
+            <li class="nav-team">
+              <a href="#english" class="nav-link">English</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main class="main">
+      <div class="container">
+        <section class="section" id="profile">
+          <img class="rounded-img" src="./assets/img/img.png" alt="My Photo" />
+          <div class="section">
+            <h1 class="section-title">Kasavets Aliaksandr</h1>
+            <h3 class="section-sub">Junior Frontend Developer</h3>
+          </div>
+        </section>
+      </div>
+    </main>
+  </body>
 </html>
